--- a/src/Main/Tech.Cluee.HisWeb/appsettings.json
+++ b/src/Main/Tech.Cluee.HisWeb/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "His": {
+      "connectionString": "Data Source=/var/lib/docker/volumes/antjobweb_data/_data/His.db",
+      "providerName": "SQLite"
+    },
+    "School": {
+      "connectionString": "Data Source=/var/lib/docker/volumes/antjobweb_data/_data/School.db",
+      "providerName": "SQLite"
+    }
+  }
 }
