--- a/src/Main/Tech.Cluee.HisWeb/Tech.Cluee.HisWeb.csproj
+++ b/src/Main/Tech.Cluee.HisWeb/Tech.Cluee.HisWeb.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>bd4ef8d8-ee14-4eff-8e00-8e6e1cb76af8</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -9,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="NewLife.Cube.Core" Version="3.8.2021.304" />
   </ItemGroup>
 
