--- a/Main/Tech.Cluee.XCode/App.config
+++ b/Main/Tech.Cluee.XCode/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
    <connectionStrings>
-    <add name="SmartEdu" connectionString="server=dbsvr-mssql.cluee.tech,51433;database=SmartEdu;uid=sa;pwd=ADMIN@pwd-2020;" providerName="System.Data.SqlClient"/>
+    <add name="SmartEdu" connectionString="Data Source=/var/lib/docker/volumes/antjobweb_data/_data/SmartEdu.db" providerName="SQLite"/>
   </connectionStrings>
 </configuration>
