--- a/Main/Tech.Cluee.HisWeb/appsettings.json
+++ b/Main/Tech.Cluee.HisWeb/appsettings.json
@@ -9,11 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "His": {
-      "connectionString": "Data Source=/var/lib/docker/volumes/antweb_data/_data/His.db",
+      "connectionString": "Data Source=./Data/His.db",
       "providerName": "SQLite"
     },
     "School": {
-      "connectionString": "Data Source=/var/lib/docker/volumes/antweb_data/_data/School.db",
+      "connectionString": "Data Source=./Data/School.db",
       "providerName": "SQLite"
     }
   }
